// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Footnote renders correctly (snapshot) 1`] = `
<DocumentFragment>
  .emotion-0 {
  scroll-margin-top: 85px;
}

<a
    class="footnote-reference emotion-0"
    href="#footnote-1"
    id="ref-1-1"
  >
    [1]
  </a>
  .emotion-0 {
  scroll-margin-top: 85px;
  border: 0;
  border-collapse: collapse;
  margin: 24px 0;
  font-size: 13px;
  line-height: 24px;
}

.emotion-0 tbody tr td a {
  font-size: 13px;
}

.emotion-0 tbody tr td div.highlight pre {
  background-color: inherit;
}

.emotion-0:target {
  background-color: #ffa;
}

.emotion-1 {
  border: 0;
  padding: 11px 5px 12px;
}

<table
    class="emotion-0"
    id="footnote-1"
    rules="none"
  >
    <colgroup>
      <col />
    </colgroup>
    <tbody>
      <tr
        style="vertical-align: top;"
      >
        <td
          class="emotion-1"
        >
          [
          <a
            href="#ref-1-1"
          >
            1
          </a>
          ]
        </td>
        <td
          class="emotion-1"
        >
           MongoDB only supports Oracle Linux running the Red Hat Compatible Kernel.
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`FootnoteReference renders correctly (snapshot) 1`] = `
<DocumentFragment>
  .emotion-0 {
  scroll-margin-top: 85px;
}

<a
    class="footnote-reference emotion-0"
    href="#footnote-1"
    id="ref-1-1"
  >
    [1]
  </a>
</DocumentFragment>
`;

exports[`Multiple footnotes renders correctly (snapshot) 1`] = `
<DocumentFragment>
  .emotion-0 {
  scroll-margin-top: 85px;
}

<p>
    Oracle Linux 
    <a
      class="footnote-reference emotion-0"
      href="#footnote-1"
      id="ref-1-1"
    >
      [1]
    </a>
    , Rocky Linux 
    <a
      class="footnote-reference emotion-0"
      href="#footnote-2"
      id="ref-2-1"
    >
      [2]
    </a>
  </p>
  .emotion-0 {
  scroll-margin-top: 85px;
  border: 0;
  border-collapse: collapse;
  margin: 24px 0;
  font-size: 13px;
  line-height: 24px;
}

.emotion-0 tbody tr td a {
  font-size: 13px;
}

.emotion-0 tbody tr td div.highlight pre {
  background-color: inherit;
}

.emotion-0:target {
  background-color: #ffa;
}

.emotion-1 {
  border: 0;
  padding: 11px 5px 12px;
}

<table
    class="emotion-0"
    id="footnote-1"
    rules="none"
  >
    <colgroup>
      <col />
    </colgroup>
    <tbody>
      <tr
        style="vertical-align: top;"
      >
        <td
          class="emotion-1"
        >
          [
          <a
            href="#ref-1-1"
          >
            1
          </a>
          ]
        </td>
        <td
          class="emotion-1"
        >
           First footnote.
        </td>
      </tr>
    </tbody>
  </table>
  .emotion-0 {
  scroll-margin-top: 85px;
  border: 0;
  border-collapse: collapse;
  margin: 24px 0;
  font-size: 13px;
  line-height: 24px;
}

.emotion-0 tbody tr td a {
  font-size: 13px;
}

.emotion-0 tbody tr td div.highlight pre {
  background-color: inherit;
}

.emotion-0:target {
  background-color: #ffa;
}

.emotion-1 {
  border: 0;
  padding: 11px 5px 12px;
}

<table
    class="emotion-0"
    id="footnote-2"
    rules="none"
  >
    <colgroup>
      <col />
    </colgroup>
    <tbody>
      <tr
        style="vertical-align: top;"
      >
        <td
          class="emotion-1"
        >
          [
          <a
            href="#ref-2-1"
          >
            2
          </a>
          ]
        </td>
        <td
          class="emotion-1"
        >
           Second footnote.
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

